src/style.css
html {
  box-sizing: border-box;
}

html, body {
  overflow: auto;
}

#root {
  height: 100%;
}

.App {
  height: 100%;
}

body {
  width: 100vw;
  height: 100vh;
  margin: 0;
  font-family: 'Lato', sans-serif;
}

button:hover {
  cursor: pointer;
}

.logo {
  font-family: 'Shrikhand', cursive;
  color: #fff;
  font-size: 2.25em;
  font-weight: 300;
  text-shadow: 2px 2px 2px #000;
  text-align: center;
  background-color: rgba(29, 26, 46, 0.838);
  line-height: 2.50em;
  width: 100%;
}

.main-container {
  height: 100vh;
  background-image: url(./images/main-back.jpg);
  background-size: cover;
}

.welcome-container {
  align-items: center;
  display: flex;
  flex-direction: column; 
  justify-content: space-between;
  height: 100%;
}

.welcome-msg {
  padding: 15px 25px;
  color: white;
  background-color: rgba(255, 250, 250, 0.374);
  margin-bottom: 30px;
}

.welcome-header {
  font-size: 1.3em;
  text-shadow: 1px 1px 1px #000;
  letter-spacing: 1px;
}

.welcome-text {
  font-size: 1.1em;
  width: 90%;
  color: white;
  font-weight: 300;
  text-shadow: 1px 1px 1px #000;
  letter-spacing: 0.5px;
}

.btn {
  padding: 26px 20px;
  width: 96%;
  border-radius: 50px;
  border: none;
  font-size: 1.3em;
  color: white;
  background-color: rgb(29, 26, 46);
}

.options-container {
  height: 100%;
  background-image: linear-gradient(
    185deg,
    hsl(13deg 93% 68%) 0%,
    hsl(13deg 86% 65%) 7%,
    hsl(13deg 80% 63%) 15%,
    hsl(13deg 75% 61%) 22%,
    hsl(13deg 71% 59%) 30%,
    hsl(13deg 67% 57%) 38%,
    hsl(13deg 63% 55%) 45%,
    hsl(13deg 59% 53%) 53%,
    hsl(13deg 56% 51%) 61%,
    hsl(13deg 56% 49%) 69%,
    hsl(13deg 57% 47%) 77%,
    hsl(13deg 59% 45%) 84%,
    hsl(13deg 60% 43%) 92%,
    hsl(13deg 62% 41%) 100%
  );
  color: #2c0000;
  padding: 0 25px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.burger-btn-container {
  cursor: pointer;
  width: 100%;
  margin-top: 20px;
}

.bar1, .bar2, .bar3 {
  width: 35px;
  height: 5px;
  background-color: #333;
  margin: 6px 0;
  transition: 0.4s;
}

.change .bar1 {
  transform: translate(0, 11px) rotate(-45deg);
}

.change .bar2 {opacity: 0;}

.change .bar3 {
  transform: translate(0, -11px) rotate(45deg);
}

.dropdwn-menu {
  position: absolute;
    top: 80px;
    left: 0;
  width: 100%;
  height: 100px;
  background-color: #2c0000;
  display: none;
}

.hidden {
  display: block;
}

.option-hello-msg {
  text-align: left;
  width: 100%;
  color:#333;
  margin-bottom: 10px;
}

.option-header {
  font-weight: 600;
  font-size: 1.7em;
  margin: 0 0 25px 0;
  text-align: left;
  width: 100%;
}

.option-search {
  height: 60px;
  width: 100%;
  border-radius: 20px;
  border: none;
  text-indent: 30px;
  background-color: #fab7a7;
  margin-bottom: 50px;
  font-size: 1.2em;
}

.option-search::placeholder {
  color:#b57569;
}

.meal-options {
  display: flex;
  flex-direction: row;
  width: 100%;
  flex-wrap: wrap;
  margin-bottom: 20px;
}

.option {
  height: 100px;
  display: flex;
  flex-direction: column;
  align-items: center;
  color: rgb(29, 26, 46);
  width: 33.3%;
  font-weight: 600;
  margin-bottom: 40px;
}

.option-img {
  width: 80%;
  margin-bottom: 10px;
}

.random-container {
  background-color: #273b7a;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100px;
  width: 100%;
  border-radius: 30px;
    -webkit-box-shadow: 2px 5px 22px -5px rgba(66, 68, 90, 1);
    -moz-box-shadow: 2px 5px 22px -5px rgba(66, 68, 90, 1);
  box-shadow: 2px 5px 22px -5px rgba(66, 68, 90, 1);
  margin-top: 80px;   
}

.random-txt {
  font-size: 2em;
  text-align: center;
  color: #F2EFE9;
  font-weight: 400;
  margin-right: 20px;
}

.random-img {
  width: 15%;
}

